[package]
name = "monolith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = "0.6.18"
serde = { version = "1.0.162", features = ["derive"] }
tokio = {version = "1.28.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
rand = "0.8.4"
dotenv = "0.15.0"
bevy = "0.10.1"
serde_json = "1.0.96"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
