[package]
name = "modify-creature"
version = "0.1.0"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "modify_creature"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
bolt-lang = "0.0.1"
anchor-lang = "0.29.0"
creature = { path = "../creature", features = ["cpi"] }
serde = { version = "1.0.193", features = ["derive"] }
